[gd_scene load_steps=7 format=3 uid="uid://dxuh2nfknhvt3"]

[ext_resource type="Script" path="res://scripts/main/rooms/24x16/empty_room.gd" id="1_nwjac"]
[ext_resource type="TileSet" uid="uid://djw8f0o58mryj" path="res://assets/art/tilemaps/new_general.tres" id="2_uwkid"]
[ext_resource type="Script" path="res://scripts/main/rooms/room_area.gd" id="3_a0tvt"]
[ext_resource type="Script" path="res://scripts/main/rooms/mob_spawn_manager.gd" id="4_srjyd"]
[ext_resource type="Script" path="res://scripts/main/rooms/room_manager.gd" id="5_afa1h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rasot"]
size = Vector2(352, 224)

[node name="EmptyRoom" type="Node2D"]
script = ExtResource("1_nwjac")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_uwkid")
format = 2
layer_0/name = "floor"
layer_0/tile_data = PackedInt32Array(-458759, 524288, 8, -458758, 524288, 8, -458757, 524288, 8, -458756, 524288, 8, -458755, 524288, 8, -458754, 524288, 8, -524287, 524288, 8, -524286, 524288, 8, -524285, 524288, 8, -524284, 524288, 8, -524283, 524288, 8, -524282, 524288, 8, 524280, 524288, 11, 524281, 524288, 11, 524282, 524288, 11, 524283, 524288, 11, 524284, 524288, 11, 524285, 524288, 11, 524286, 524288, 11, 458753, 524288, 11, 458754, 524288, 11, 458755, 524288, 11, 458756, 524288, 11, 458757, 524288, 11, 458758, 524288, 11, 458759, 524288, 11, -458760, 524288, 8, -524281, 524288, 8, -458753, 524288, 8, -524288, 524288, 8, 524287, 524288, 11, 458752, 524288, 11, 458760, 524288, 11, 458761, 524288, 11, 458762, 524288, 11, -524280, 524288, 8, -524279, 524288, 8, -524278, 524288, 8, -458763, 524288, 8, -458762, 524288, 8, -458761, 524288, 8, 524277, 524288, 11, 524278, 524288, 11, 524279, 524288, 11, 458740, 327680, 9, 393204, 327680, 9, 327668, 327680, 9, 262132, 327680, 9, 196596, 327680, 9, 131060, 327680, 9, 65524, 327680, 9, -12, 327680, 9, -65548, 327680, 9, -131084, 327680, 9, -196620, 327680, 9, -262156, 327680, 9, -327692, 327680, 9, -393228, 327680, 9, -458741, 720896, 9, -393205, 720896, 9, -327669, 720896, 9, -262133, 720896, 9, -196597, 720896, 9, -131061, 720896, 9, -65525, 720896, 9, 11, 720896, 9, 65547, 720896, 9, 131083, 720896, 9, 196619, 720896, 9, 262155, 720896, 9, 327691, 720896, 9, 393227, 720896, 9, 458763, 524288, 11, 524276, 524288, 11, -524277, 524288, 8, -458764, 524288, 8, -393227, 327680, 3, -327691, 327680, 3, -262155, 327680, 3, -196619, 327680, 3, -131083, 327680, 3, -65547, 327680, 3, -11, 327680, 3, 65525, 327680, 3, 131061, 327680, 3, 196597, 327680, 3, 262133, 327680, 3, 327669, 327680, 3, 393205, 327680, 3, 458741, 327680, 3, -393226, 327680, 3, -327690, 327680, 3, -262154, 327680, 3, -196618, 327680, 3, -131082, 327680, 3, -65546, 327680, 3, -10, 327680, 3, 65526, 327680, 3, 131062, 327680, 3, 196598, 327680, 3, 262134, 327680, 3, 327670, 327680, 3, 393206, 327680, 3, 458742, 327680, 3, -393225, 327680, 3, -327689, 327680, 3, -262153, 327680, 3, -196617, 327680, 3, -131081, 327680, 3, -65545, 327680, 3, -9, 327680, 3, 65527, 327680, 3, 131063, 327680, 3, 196599, 327680, 3, 262135, 327680, 3, 327671, 327680, 3, 393207, 327680, 3, 458743, 327680, 3, -393224, 327680, 3, -327688, 327680, 3, -262152, 327680, 3, -196616, 327680, 3, -131080, 327680, 3, -65544, 327680, 3, -8, 327680, 3, 65528, 327680, 3, 131064, 327680, 3, 196600, 327680, 3, 262136, 327680, 3, 327672, 327680, 3, 393208, 327680, 3, 458744, 327680, 3, -393223, 327680, 3, -327687, 327680, 3, -262151, 327680, 3, -196615, 327680, 3, -131079, 327680, 3, -65543, 327680, 3, -7, 327680, 3, 65529, 327680, 3, 131065, 327680, 3, 196601, 327680, 3, 262137, 327680, 3, 327673, 327680, 3, 393209, 327680, 3, 458745, 327680, 3, -393222, 327680, 3, -327686, 327680, 3, -262150, 327680, 3, -196614, 327680, 3, -131078, 327680, 3, -65542, 327680, 3, -6, 327680, 3, 65530, 327680, 3, 131066, 327680, 3, 196602, 327680, 3, 262138, 327680, 3, 327674, 327680, 3, 393210, 327680, 3, 458746, 327680, 3, -393221, 327680, 3, -327685, 327680, 3, -262149, 327680, 3, -196613, 327680, 3, -131077, 327680, 3, -65541, 327680, 3, -5, 327680, 3, 65531, 327680, 3, 131067, 327680, 3, 196603, 327680, 3, 262139, 327680, 3, 327675, 327680, 3, 393211, 327680, 3, 458747, 327680, 3, -393220, 327680, 3, -327684, 327680, 3, -262148, 327680, 3, -196612, 327680, 3, -131076, 327680, 3, -65540, 327680, 3, -4, 327680, 3, 65532, 327680, 3, 131068, 327680, 3, 196604, 327680, 3, 262140, 327680, 3, 327676, 327680, 3, 393212, 327680, 3, 458748, 327680, 3, -393219, 327680, 3, -327683, 327680, 3, -262147, 327680, 3, -196611, 327680, 3, -131075, 327680, 3, -65539, 327680, 3, -3, 327680, 3, 65533, 327680, 3, 131069, 327680, 3, 196605, 327680, 3, 262141, 327680, 3, 327677, 327680, 3, 393213, 327680, 3, 458749, 327680, 3, -393218, 327680, 3, -327682, 327680, 3, -262146, 327680, 3, -196610, 327680, 3, -131074, 327680, 3, -65538, 327680, 3, -2, 327680, 3, 65534, 327680, 3, 131070, 327680, 3, 196606, 327680, 3, 262142, 327680, 3, 327678, 327680, 3, 393214, 327680, 3, 458750, 327680, 3, -393217, 327680, 3, -327681, 327680, 3, -262145, 327680, 3, -196609, 327680, 3, -131073, 327680, 3, -65537, 327680, 3, -1, 327680, 3, 65535, 327680, 3, 131071, 327680, 3, 196607, 327680, 3, 262143, 327680, 3, 327679, 327680, 3, 393215, 327680, 3, 458751, 327680, 3, -458752, 327680, 3, -393216, 327680, 3, -327680, 327680, 3, -262144, 327680, 3, -196608, 327680, 3, -131072, 327680, 3, -65536, 327680, 3, 0, 327680, 3, 65536, 327680, 3, 131072, 327680, 3, 196608, 327680, 3, 262144, 327680, 3, 327680, 327680, 3, 393216, 327680, 3, -458751, 327680, 3, -393215, 327680, 3, -327679, 327680, 3, -262143, 327680, 3, -196607, 327680, 3, -131071, 327680, 3, -65535, 327680, 3, 1, 327680, 3, 65537, 327680, 3, 131073, 327680, 3, 196609, 327680, 3, 262145, 327680, 3, 327681, 327680, 3, 393217, 327680, 3, -458750, 327680, 3, -393214, 327680, 3, -327678, 327680, 3, -262142, 327680, 3, -196606, 327680, 3, -131070, 327680, 3, -65534, 327680, 3, 2, 327680, 3, 65538, 327680, 3, 131074, 327680, 3, 196610, 327680, 3, 262146, 327680, 3, 327682, 327680, 3, 393218, 327680, 3, -458749, 327680, 3, -393213, 327680, 3, -327677, 327680, 3, -262141, 327680, 3, -196605, 327680, 3, -131069, 327680, 3, -65533, 327680, 3, 3, 327680, 3, 65539, 327680, 3, 131075, 327680, 3, 196611, 327680, 3, 262147, 327680, 3, 327683, 327680, 3, 393219, 327680, 3, -458748, 327680, 3, -393212, 327680, 3, -327676, 327680, 3, -262140, 327680, 3, -196604, 327680, 3, -131068, 327680, 3, -65532, 327680, 3, 4, 327680, 3, 65540, 327680, 3, 131076, 327680, 3, 196612, 327680, 3, 262148, 327680, 3, 327684, 327680, 3, 393220, 327680, 3, -458747, 327680, 3, -393211, 327680, 3, -327675, 327680, 3, -262139, 327680, 3, -196603, 327680, 3, -131067, 327680, 3, -65531, 327680, 3, 5, 327680, 3, 65541, 327680, 3, 131077, 327680, 3, 196613, 327680, 3, 262149, 327680, 3, 327685, 327680, 3, 393221, 327680, 3, -458746, 327680, 3, -393210, 327680, 3, -327674, 327680, 3, -262138, 327680, 3, -196602, 327680, 3, -131066, 327680, 3, -65530, 327680, 3, 6, 327680, 3, 65542, 327680, 3, 131078, 327680, 3, 196614, 327680, 3, 262150, 327680, 3, 327686, 327680, 3, 393222, 327680, 3, -458745, 327680, 3, -393209, 327680, 3, -327673, 327680, 3, -262137, 327680, 3, -196601, 327680, 3, -131065, 327680, 3, -65529, 327680, 3, 7, 327680, 3, 65543, 327680, 3, 131079, 327680, 3, 196615, 327680, 3, 262151, 327680, 3, 327687, 327680, 3, 393223, 327680, 3, -458744, 327680, 3, -393208, 327680, 3, -327672, 327680, 3, -262136, 327680, 3, -196600, 327680, 3, -131064, 327680, 3, -65528, 327680, 3, 8, 327680, 3, 65544, 327680, 3, 131080, 327680, 3, 196616, 327680, 3, 262152, 327680, 3, 327688, 327680, 3, 393224, 327680, 3, -458743, 327680, 3, -393207, 327680, 3, -327671, 327680, 3, -262135, 327680, 3, -196599, 327680, 3, -131063, 327680, 3, -65527, 327680, 3, 9, 327680, 3, 65545, 327680, 3, 131081, 327680, 3, 196617, 327680, 3, 262153, 327680, 3, 327689, 327680, 3, 393225, 327680, 3, -458742, 327680, 3, -393206, 327680, 3, -327670, 327680, 3, -262134, 327680, 3, -196598, 327680, 3, -131062, 327680, 3, -65526, 327680, 3, 10, 327680, 3, 65546, 327680, 3, 131082, 327680, 3, 196618, 327680, 3, 262154, 327680, 3, 327690, 327680, 3, 393226, 327680, 3)
layer_1/name = "wall"
layer_1/tile_data = PackedInt32Array(524281, 65536, 7, 524282, 65536, 7, 524283, 65536, 7, 524284, 65536, 7, 524285, 65536, 7, 524286, 65536, 7, 458753, 65536, 7, 458754, 65536, 7, 458755, 65536, 7, 458756, 65536, 7, 458757, 65536, 7, 458758, 65536, 7, -524295, 65536, 7, -524294, 65536, 7, -524293, 65536, 7, -524292, 65536, 7, -524291, 65536, 7, -524290, 65536, 7, -589823, 65536, 7, -589822, 65536, 7, -589821, 65536, 7, -589820, 65536, 7, -589819, 65536, 7, -589818, 65536, 7, 524287, 65536, 7, 458752, 65536, 7, -524289, 65536, 7, -589824, 65536, 7, 458759, 65536, 7, 458760, 65536, 7, 458761, 65536, 7, -589817, 65536, 7, -589816, 65536, 7, -589815, 65536, 7, -589814, 65536, 7, -524296, 65536, 7, -524297, 65536, 7, -524298, 65536, 7, 524278, 65536, 7, 524279, 65536, 7, 524280, 65536, 7, -524299, 65536, 7, 524276, 0, 7, 458763, 262144, 7, 524277, 65536, 7, 458762, 65536, 7, 393227, 196608, 5, 327691, 196608, 5, 262155, 196608, 5, 196619, 196608, 5, 131083, 196608, 5, 65547, 196608, 5, 11, 196608, 5, -65525, 196608, 5, -131061, 196608, 5, -196597, 196608, 5, -262133, 196608, 5, -327669, 196608, 5, -393205, 196608, 5, -458741, 196608, 5, -524277, 196608, 5, 458740, 131072, 5, 393204, 131072, 5, 327668, 131072, 5, 262132, 131072, 5, 196596, 131072, 5, 131060, 131072, 5, 65524, 131072, 5, -12, 131072, 5, -65548, 131072, 5, -131084, 131072, 5, -196620, 131072, 5, -262156, 131072, 5, -327692, 131072, 5, -393228, 131072, 5, -458764, 131072, 5, -524300, 65536, 7, -589813, 65536, 7)
layer_2/name = "furniture"
layer_2/tile_data = PackedInt32Array()
layer_3/name = "items"
layer_3/tile_data = PackedInt32Array()

[node name="RoomArea" type="Area2D" parent="."]
collision_mask = 14
script = ExtResource("3_a0tvt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomArea"]
shape = SubResource("RectangleShape2D_rasot")

[node name="Doors" type="Node2D" parent="."]

[node name="MobSpawnManager" type="Node2D" parent="."]
script = ExtResource("4_srjyd")

[node name="RoomManager" type="Node" parent="."]
script = ExtResource("5_afa1h")

[node name="RoomPattern" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]

[connection signal="body_entered" from="RoomArea" to="." method="_on_room_area_body_entered"]
[connection signal="body_entered" from="RoomArea" to="RoomArea" method="_on_body_entered"]
[connection signal="body_exited" from="RoomArea" to="RoomArea" method="_on_body_exited"]
[connection signal="spawn_mobs" from="RoomArea" to="MobSpawnManager" method="_on_room_area_spawn_mobs"]
[connection signal="timeout" from="SpawnTimer" to="RoomArea" method="_on_spawn_timer_timeout"]
